Finished the build infos table view

--- a/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Empty Window.xcscheme
+++ b/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Empty Window.xcscheme
@@ -8,7 +8,7 @@
       buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForTesting = "NO"
+            buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
@@ -62,7 +62,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C82C8C9A28B4EC7F00CBF5D7"
@@ -70,7 +71,7 @@
             BlueprintName = "Empty Window"
             ReferencedContainer = "container:Empty Window.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = ""
