--- a/Empty Window/Empty Window/Configs/Base.xcconfig
+++ b/Empty Window/Empty Window/Configs/Base.xcconfig
@@ -9,4 +9,4 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 
-BUNDLE_IDENTIFYIER = com.learn.Empty-Window
+PRODUCT_BUNDLE_IDENTIFIER = com.learn.Empty-Window
