--- a/Empty Window/Empty Window/Configs/Debug.xcconfig
+++ b/Empty Window/Empty Window/Configs/Debug.xcconfig
@@ -10,4 +10,6 @@
 
 #include "Base.xcconfig"
 API_BASE_URL = https:/$()/qa.api.example.com
-BUNDLE_IDENTIFYIER = $(BUNDLE_IDENTIFYIER).debug
+PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFYIER).debug
+INFOPLIST_KEY_CFBundleDisplayName = $(INFOPLIST_KEY_CFBundleDisplayName) Debug
+PRODUCT_NAME = $(PRODUCT_NAME) Debug
