--- a/Empty Window/Empty Window/Configs/Debug.xcconfig
+++ b/Empty Window/Empty Window/Configs/Debug.xcconfig
@@ -7,9 +7,10 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
-
 #include "Base.xcconfig"
+
 API_BASE_URL = https:/$()/qa.api.example.com
-PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFYIER).debug
-INFOPLIST_KEY_CFBundleDisplayName = $(INFOPLIST_KEY_CFBundleDisplayName) Debug
-PRODUCT_NAME = $(PRODUCT_NAME) Debug
+PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER).debug
+INFOPLIST_KEY_CFBundleDisplayName = Debug-$(inherited)
+PRODUCT_NAME = Debug-$(BASE_PRODUCT_NAME)
+
