--- a/Empty Window/Empty Window/Info.plist
+++ b/Empty Window/Empty Window/Info.plist
@@ -2,7 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>API_BASE_URL</key>
+	<key>Build Configuration</key>
+	<string>$(CONFIGURATION)</string>
+	<key>Api Base Url</key>
 	<string>${API_BASE_URL}</string>
 	<key>CFBundleIdentifier</key>
 	<string></string>
