Finished Scheme environment variables.

--- a/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Debug Empty Window.xcscheme
+++ b/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Debug Empty Window.xcscheme
@@ -74,13 +74,8 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = ""
-            value = ""
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "REGEISTRY_API_KEY"
-            value = ""
+            key = "REGISTRY_API_KEY"
+            value = "degbu registry api key"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
