Finished Build Phase Scripts

--- a/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Debug Empty Window.xcscheme
+++ b/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Debug Empty Window.xcscheme
@@ -10,9 +10,9 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C82C8C9A28B4EC7F00CBF5D7"
@@ -86,6 +86,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C82C8C9A28B4EC7F00CBF5D7"
+            BuildableName = "Empty Window.app"
+            BlueprintName = "Empty Window"
+            ReferencedContainer = "container:Empty Window.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
