--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .DS_Store
 #"Empty Window"/"Empty Window"/Base/Configs.swift
 Empty Window/Empty Window/Base/Configs.swift
+/NetworkService/archives/
