Finished added a paid version.

--- a/Empty Window/Empty Window/Configs/Base.xcconfig
+++ b/Empty Window/Empty Window/Configs/Base.xcconfig
@@ -10,6 +10,6 @@
 
 BASE_PRODUCT_BUNDLE_IDENTIFIER = com.learn.Empty-Window
 PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER)
-INFOPLIST_KEY_CFBundleDisplayName = Emptp Window
-BASE_PRODUCT_NAME = Empty Window
+INFOPLIST_KEY_CFBundleDisplayName = Empty Window
+BASE_PRODUCT_NAME = EW
 PRODUCT_NAME = $(BASE_PRODUCT_NAME)
