--- a/Empty Window/Empty Window/Configs/FreeRelease.xcconfig
+++ b/Empty Window/Empty Window/Configs/FreeRelease.xcconfig
@@ -7,10 +7,9 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+
 #include "Base.xcconfig"
-
 API_BASE_URL = https:/$()/qa.api.example.com
-PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER).debug
-INFOPLIST_KEY_CFBundleDisplayName = Debug-$(inherited)
-PRODUCT_NAME = Debug-$(BASE_PRODUCT_NAME)
-
+PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER).free
+INFOPLIST_KEY_CFBundleDisplayName = Free-$(inherited)
+PRODUCT_NAME = Free-$(BASE_PRODUCT_NAME)
