--- a/Empty Window/Empty Window/Configs/FreeRelease.xcconfig
+++ b/Empty Window/Empty Window/Configs/FreeRelease.xcconfig
@@ -11,5 +11,5 @@
 #include "Base.xcconfig"
 API_BASE_URL = https:/$()/qa.api.example.com
 PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER).free
-INFOPLIST_KEY_CFBundleDisplayName = Free-$(inherited)
+INFOPLIST_KEY_CFBundleDisplayName = Free-$(BASE_PRODUCT_NAME)
 PRODUCT_NAME = Free-$(BASE_PRODUCT_NAME)
