--- a/Empty Window/Empty Window/Configs/PaidDebug.xcconfig
+++ b/Empty Window/Empty Window/Configs/PaidDebug.xcconfig
@@ -10,5 +10,5 @@
 #include "Base.xcconfig"
 API_BASE_URL = https:/$()/qa.api.example.com
 PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER).paid.debug
-INFOPLIST_KEY_CFBundleDisplayName = Paid-Debug-$(inherited)
+INFOPLIST_KEY_CFBundleDisplayName = Paid-Debug-$(BASE_PRODUCT_NAME)
 PRODUCT_NAME = Paid-Debug-$(BASE_PRODUCT_NAME)
