--- a/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Paid Debug Empty Window.xcscheme
+++ b/Empty Window/Empty Window.xcodeproj/xcshareddata/xcschemes/Paid Debug Empty Window.xcscheme
@@ -16,7 +16,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C4A59D3F2DBF6C6C004CFA72"
-               BuildableName = "Empty Window Paid.app"
+               BuildableName = "Paid-EW.app"
                BlueprintName = "Empty Window Paid"
                ReferencedContainer = "container:Empty Window.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C4A59D3F2DBF6C6C004CFA72"
-            BuildableName = "Empty Window Paid.app"
+            BuildableName = "Paid-EW.app"
             BlueprintName = "Empty Window Paid"
             ReferencedContainer = "container:Empty Window.xcodeproj">
          </BuildableReference>
@@ -69,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C4A59D3F2DBF6C6C004CFA72"
-            BuildableName = "Empty Window Paid.app"
+            BuildableName = "Paid-EW.app"
             BlueprintName = "Empty Window Paid"
             ReferencedContainer = "container:Empty Window.xcodeproj">
          </BuildableReference>
