--- a/Empty Window/Empty Window/Configs/PaidDebug.xcconfig
+++ b/Empty Window/Empty Window/Configs/PaidDebug.xcconfig
@@ -8,7 +8,10 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 #include "Base.xcconfig"
+//#include "../../../Pods/Target Support Files/Pods-EW-Empty Window Paid/Pods-EW-Empty Window Paid.debug.xcconfig"
+
 API_BASE_URL = https:/$()/qa.api.example.com
 PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER).paid.debug
 INFOPLIST_KEY_CFBundleDisplayName = Paid-Debug-$(BASE_PRODUCT_NAME)
 PRODUCT_NAME = Paid-Debug-$(BASE_PRODUCT_NAME)
+
