--- a/Empty Window/Empty Window/Configs/FreeRelease.xcconfig
+++ b/Empty Window/Empty Window/Configs/FreeRelease.xcconfig
@@ -8,8 +8,9 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
+
+#include "../../../Pods/Target Support Files/Pods-EW-Empty Window/Pods-EW-Empty Window.release.xcconfig"
 #include "Base.xcconfig"
-//#include "../../../Pods/Target Support Files/Pods-EW-Empty Window/Pods-EW-Empty Window.release.xcconfig"
 
 API_BASE_URL = https:/$()/qa.api.example.com
 PRODUCT_BUNDLE_IDENTIFIER = $(BASE_PRODUCT_BUNDLE_IDENTIFIER).free
